force-app/main/default/objects/Location/fields/Competitor_Density__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Density__c</fullName>
    <label>Competitor Density</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>