force-app/main/default/objects/Location/fields/Demo_Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Demo_Growth_Rate__c</fullName>
    <label>Demo Growth Rate</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>