force-app/main/default/objects/Location/fields/Estimated_Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Setup_Cost__c</fullName>
    <label>Estimated Setup Cost</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>