force-app/main/default/objects/Location/fields/Payback_Period_Years__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Years__c</fullName>
    <label>Payback Period Years</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>