force-app/main/default/objects/Location/fields/Scorecard_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Last_Updated__c</fullName>
    <label>Scorecard Last Updated</label>
    <type>DateTime</type>
</CustomField>