force-app/main/default/objects/Location/fields/Site_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Site_Recommendation__c</fullName>
    <label>Site Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
            <value>
                <fullName>Not Recommended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>