force-app/main/default/objects/Location/recordTypes/Proposed_Site.recordType-meta.xml
<RecordType>
    <fullName>Proposed_Site</fullName>
    <active>true</active>
    <description>Proposed store expansion site for demand scoring and analysis</description>
    <label>Proposed Site</label>
</RecordType>